# haskell-template-project

./: README.md  cabal.config  cabal.sandbox.config  cps.cabal
src/: Cps.hs
test/: CpsSpec.hs
